feat(irs-api):[#199] register policy definition for certain bpnls