@@ -27,6 +27,12 @@ import static org.eclipse.tractusx.irs.common.ApiConstants.FORBIDDEN_DESC;
 import static org.eclipse.tractusx.irs.common.ApiConstants.UNAUTHORIZED_DESC;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
+import java.util.AbstractMap;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -36,7 +42,6 @@ import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import jakarta.validation.Valid;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.eclipse.tractusx.irs.common.auth.IrsRoles;
@@ -67,7 +72,8 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("irs")
 @RequiredArgsConstructor
 @SuppressWarnings({ "PMD.AvoidDuplicateLiterals",
-                    "PMD.ExcessiveImports"
+                    "PMD.ExcessiveImports",
+                    "PMD.UseVarargs"
 })
 public class PolicyStoreController {
 
@@ -76,8 +82,7 @@ public class PolicyStoreController {
 
     @Operation(operationId = "registerAllowedPolicy",
                summary = "Register a policy that should be accepted in EDC negotiation.",
-               security = @SecurityRequirement(name = "api_key"),
-               tags = { "Item Relationship Service" },
+               security = @SecurityRequirement(name = "api_key"), tags = { "Item Relationship Service" },
                description = "Register a policy that should be accepted in EDC negotiation.")
     @ApiResponses(value = { @ApiResponse(responseCode = "201"),
                             @ApiResponse(responseCode = "400", description = "Policy registration failed.",
@@ -103,15 +108,47 @@ public class PolicyStoreController {
     @ResponseStatus(HttpStatus.CREATED)
     @PreAuthorize("hasAuthority('" + IrsRoles.ADMIN_IRS + "')")
     public void registerAllowedPolicy(final @RequestBody CreatePolicyRequest request) {
-        final Policy policy = edcTransformer.transformToPolicy(request.payload());
-        policy.setValidUntil(request.validUntil());
-        service.registerPolicy(policy);
+        request.payload().stream().map(payload -> {
+            final Policy policy = edcTransformer.transformToPolicy(payload);
+            policy.setValidUntil(request.validUntil());
+            return policy;
+        }).forEach(policy -> service.registerPolicy(policy, request.businessPartnerNumbers()));
+    }
+
+    @Operation(operationId = "getAllowedPoliciesByBpn",
+               summary = "Lists the registered policies that should be accepted in EDC negotiation.",
+               security = @SecurityRequirement(name = "api_key"), tags = { "Item Relationship Service" },
+               description = "Lists the registered policies that should be accepted in EDC negotiation.")
+    @ApiResponses(value = { @ApiResponse(responseCode = "200", description = "Returns the policies.",
+                                         content = { @Content(mediaType = APPLICATION_JSON_VALUE, array = @ArraySchema(
+                                                 schema = @Schema(implementation = Policy.class)))
+                                         }),
+                            @ApiResponse(responseCode = "401", description = UNAUTHORIZED_DESC,
+                                         content = { @Content(mediaType = APPLICATION_JSON_VALUE,
+                                                              schema = @Schema(implementation = ErrorResponse.class),
+                                                              examples = @ExampleObject(name = "error",
+                                                                                        ref = "#/components/examples/error-response-401"))
+                                         }),
+                            @ApiResponse(responseCode = "403", description = FORBIDDEN_DESC,
+                                         content = { @Content(mediaType = APPLICATION_JSON_VALUE,
+                                                              schema = @Schema(implementation = ErrorResponse.class),
+                                                              examples = @ExampleObject(name = "error",
+                                                                                        ref = "#/components/examples/error-response-403"))
+                                         }),
+    })
+    @GetMapping("/policies/{bpns}")
+    @ResponseStatus(HttpStatus.OK)
+    @PreAuthorize("hasAuthority('" + IrsRoles.ADMIN_IRS + "')")
+    public List<PolicyResponse> getPolicies(@PathVariable final String[] bpns) {
+        return service.getStoredPolicies(Arrays.stream(bpns).toList())
+                      .stream()
+                      .map(PolicyResponse::fromPolicy)
+                      .toList();
     }
 
     @Operation(operationId = "getAllowedPolicies",
                summary = "Lists the registered policies that should be accepted in EDC negotiation.",
-               security = @SecurityRequirement(name = "api_key"),
-               tags = { "Item Relationship Service" },
+               security = @SecurityRequirement(name = "api_key"), tags = { "Item Relationship Service" },
                description = "Lists the registered policies that should be accepted in EDC negotiation.")
     @ApiResponses(value = { @ApiResponse(responseCode = "200", description = "Returns the policies.",
                                          content = { @Content(mediaType = APPLICATION_JSON_VALUE, array = @ArraySchema(
@@ -133,16 +170,18 @@ public class PolicyStoreController {
     @GetMapping("/policies")
     @ResponseStatus(HttpStatus.OK)
     @PreAuthorize("hasAuthority('" + IrsRoles.ADMIN_IRS + "')")
-    public List<PolicyResponse> getPolicies() {
-        return service.getStoredPolicies().stream()
-                      .map(PolicyResponse::fromPolicy)
-                      .toList();
+    public Map<String, List<PolicyResponse>> getAllPolicies() {
+        return service.getAllStoredPolicies()
+                      .entrySet()
+                      .stream()
+                      .map(entry -> new AbstractMap.SimpleEntry<>(entry.getKey(),
+                              entry.getValue().stream().map(PolicyResponse::fromPolicy).collect(Collectors.toList())))
+                      .collect(Collectors.toMap(AbstractMap.SimpleEntry::getKey, AbstractMap.SimpleEntry::getValue));
     }
 
     @Operation(operationId = "deleteAllowedPolicy",
                summary = "Removes a policy that should no longer be accepted in EDC negotiation.",
-               security = @SecurityRequirement(name = "api_key"),
-               tags = { "Item Relationship Service" },
+               security = @SecurityRequirement(name = "api_key"), tags = { "Item Relationship Service" },
                description = "Removes a policy that should no longer be accepted in EDC negotiation.")
     @ApiResponses(value = { @ApiResponse(responseCode = "200"),
                             @ApiResponse(responseCode = "400", description = "Policy deletion failed.",
@@ -171,10 +210,9 @@ public class PolicyStoreController {
         service.deletePolicy(policyId);
     }
 
-    @Operation(operationId = "updateAllowedPolicy", summary = "Updates an existing policy with new validUntil value.",
-               security = @SecurityRequirement(name = "api_key"),
-               tags = { "Item Relationship Service" },
-               description = "Updates an existing policy with new validUntil value.")
+    @Operation(operationId = "updateAllowedPolicy", summary = "Updates an existing policy.",
+               security = @SecurityRequirement(name = "api_key"), tags = { "Item Relationship Service" },
+               description = "Updates an existing policy.")
     @ApiResponses(value = { @ApiResponse(responseCode = "200"),
                             @ApiResponse(responseCode = "400", description = "Policy update failed.",
                                          content = { @Content(mediaType = APPLICATION_JSON_VALUE,
@@ -195,11 +233,10 @@ public class PolicyStoreController {
                                                                                         ref = "#/components/examples/error-response-403"))
                                          }),
     })
-    @PutMapping("/policies/{policyId}")
+    @PutMapping("/policies")
     @ResponseStatus(HttpStatus.OK)
     @PreAuthorize("hasAuthority('" + IrsRoles.ADMIN_IRS + "')")
-    public void updateAllowedPolicy(@PathVariable("policyId") final String policyId,
-            final @Valid @RequestBody UpdatePolicyRequest request) {
-        service.updatePolicy(policyId, request);
+    public void updateAllowedPolicy(final @Valid @RequestBody UpdatePolicyRequest request) {
+        request.policiesIds().forEach(policyId -> service.updatePolicy(policyId, request));
     }
 }
